@@ -1,3 +1,9 @@
+2007-09-16  David Lawrence Ramsey  <pooka109@gmail.com>
+
+	* winio.c (edit_scroll): Fix problem where the screen wouldn't
+	be updated properly if you paged up with the first line of the
+	file onscreen and the mark on.
+
 2007-08-26  David Lawrence Ramsey  <pooka109@gmail.com>
 
 	* doc/faq.html: Update links to the Free Translation Project.
